# advent-of-code

./: .gitignore  advent-of-code.sln
Year2024/: Cargo.toml  day04.rs
Year2025/: day01.cs  day02.cs  day03.cs  day04.cs  day05.cs  day06.cs  day07.cs  day08.cs  day09.cs  day10.cs
