[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"


[[bin]]
name = "year2024-day01"
path = "year2024/day01.rs"

[[bin]]
name = "year2024-day02"
path = "year2024/day02.rs"

[[bin]]
name = "year2024-day03"
path = "year2024/day03.rs"